<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.is416.smujio.LandingActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/logo_frame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

            <ImageView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/logo"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/action_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:alpha="0">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:alpha="1"
            android:visibility="visible">

            <com.is416.smujio.component.LoadingButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/landing_margin"
                android:layout_marginRight="@dimen/landing_margin"
                android:layout_marginTop="20dp"
                android:text="@string/register"/>

            <com.is416.smujio.component.LoadingButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/landing_margin"
                android:layout_marginBottom="0dp"
                android:text="@string/login"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/landing_margin"
                android:layout_marginRight="@dimen/landing_margin"
                android:background="@drawable/beauty_edit_text_shape" >

                <ImageView
                    android:id="@+id/emailText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_email_24dp"/>

                <View
                    android:id="@+id/sp1"
                    android:layout_width="1dip"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_toRightOf="@+id/emailText"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="27.5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/sp1"
                    android:background="@android:color/transparent"
                    android:ems="19"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="1dp"
                    android:textSize="12sp" >
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/landing_margin"
                android:layout_marginRight="@dimen/landing_margin"
                android:background="@drawable/beauty_edit_text_shape" >

                <ImageView
                    android:id="@+id/passwordText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_vpn_key_24dp"/>

                <View
                    android:id="@+id/sp2"
                    android:layout_width="1dip"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_toRightOf="@+id/passwordText"
                    android:background="#EEEFFF" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="27.5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/sp2"
                    android:background="@android:color/transparent"
                    android:ems="19"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="1dp"
                    android:textSize="12sp" >
                </EditText>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/switch_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:text="@string/switch_action_exist"
                    android:textStyle="bold"
                    android:onClick="switchAction"/>

            </LinearLayout>

            <com.is416.smujio.component.LoadingButton
                android:id="@+id/action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/landing_margin"
                android:layout_marginBottom="0dp"
                android:text="@string/login"
                android:onClick="performAction"/>

        </LinearLayout>


    </RelativeLayout>



</LinearLayout>
